--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy >= 1.12.0
-scipy >= 0.18.0
-matplotlib >= 2.0.0
-sphinx >= 1.6.0
-ipython >= 5.8.0
+pygame >= 1.9.3
+numpy >= 1.13.3
+matplotlib >= 2.1.0
+PyDictionary >= 1.5.1
+nltk >= 3.2.4
+names >= 0.3.0
